--- a/sources/astria-rpc/execution-apis/Cargo.toml
+++ b/sources/astria-rpc/execution-apis/Cargo.toml
@@ -2,14 +2,18 @@
 name = "astria-execution-apis-rpc"
 version = "0.1.0"
 edition = "2021"
+license = "Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/astriaorg/astria-rpc"
+homepage = "https://astria.org"
+# TODO
+# documentation = ""
+
+categories = ["astria-execution-apis", "astria-rpc", "rpc-types"]
+keywords = ["astria", "grpc", "rpc", "blockchain", "execution", "protobuf"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-color-eyre = "0.6.2"
 prost = "0.11.6"
-tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
 tonic = "0.8.3"
-
-[build-dependencies]
-tonic-build = "0.8.4"
