--- a/sources/astria-rpc/.github/workflows/pull-request.yml
+++ b/sources/astria-rpc/.github/workflows/pull-request.yml
@@ -12,11 +12,12 @@ jobs:
       - uses: bufbuild/buf-lint-action@v1
         with:
           input: "execution-apis/proto"
-      - uses: bufbuild/buf-breaking-action@v1
-        with:
-          input: "execution-apis/proto"
-          # The 'main' branch of the GitHub repository that defines the module.
-          against: "https://github.com/astriaorg/astria-rpc.git#branch=main,ref=HEAD,subdir=execution-apis/proto"
+      # TODO(GH-3): Uncomment out after reaching any production stage
+      # - uses: bufbuild/buf-breaking-action@v1
+      #   with:
+      #     input: "execution-apis/proto"
+      #     # The 'main' branch of the GitHub repository that defines the module.
+      #     against: "https://github.com/astriaorg/astria-rpc.git#branch=main,ref=HEAD,subdir=execution-apis/proto"
   rust-check:
     runs-on: ubuntu-latest
     steps:
