--- a/sources/astria-rpc/.github/workflows/push.yml
+++ b/sources/astria-rpc/.github/workflows/push.yml
@@ -15,11 +15,12 @@ jobs:
       - uses: bufbuild/buf-lint-action@v1
         with:
           input: "execution-apis/proto"
-      - uses: bufbuild/buf-breaking-action@v1
-        with:
-          # The 'main' branch of the GitHub repository that defines the module.
-          input: "execution-apis/proto"
-          against: "https://github.com/astriaorg/astria-rpc.git#branch=main,ref=HEAD~1,subdir=execution-apis/proto"
+      # TODO(GH-3): Uncomment out after reaching any production stage
+      # - uses: bufbuild/buf-breaking-action@v1
+      #   with:
+      #     # The 'main' branch of the GitHub repository that defines the module.
+      #     input: "execution-apis/proto"
+      #     against: "https://github.com/astriaorg/astria-rpc.git#branch=main,ref=HEAD~1,subdir=execution-apis/proto"
       - uses: bufbuild/buf-push-action@v1
         with:
           input: "execution-apis"
