use OUT_DIR to generate code
http://github.com/astriaorg/astria-rpc/pull/5

This commit ensures that the build script adheres to Rust guidelines: the Rust code generated by `buf` is placed in `OUT_DIR`. By convention, build scripts should not touch code outside of `OUT_DIR`, which is set by cargo. See the official cargo reference:
https://doc.rust-lang.org/cargo/reference/build-scripts.html#outputs-of-the-build-script

Co-authored-by: Jesse Snyder <jessetsnyder@gmail.com>

--- a/sources/astria-rpc/execution-apis/buf.gen.yaml
+++ b/sources/astria-rpc/execution-apis/buf.gen.yaml
@@ -3,6 +3,6 @@ managed:
   enabled: true
 plugins:
   - plugin: buf.build/community/neoeinstein-prost
-    out: src
+    out: .
   - plugin: buf.build/community/neoeinstein-tonic
-    out: src
+    out: .
