--- a/sources/astria-rpc/execution-apis/Cargo.toml
+++ b/sources/astria-rpc/execution-apis/Cargo.toml
@@ -18,3 +18,6 @@ keywords = ["astria", "grpc", "rpc", "blockchain", "execution", "protobuf"]
 prost = "0.11.8"
 prost-types = "0.11.8"
 tonic = "0.8.3"
+
+[build-dependencies]
+which = "4.4.0"
