--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
   "crates/astria-execution-apis-rpc",
   "crates/astria-gossipnet",
   "crates/astria-rs-cnc",
+  "crates/astria-sequencer",
   "crates/astria-sequencer-relayer",
   "crates/astria-sequencer-relayer-proto",
   "crates/astria-sequencer-relayer-test",
