--- a/kubernetes-ci/prepull-daemon-set.yml
+++ b/kubernetes-ci/prepull-daemon-set.yml
@@ -28,8 +28,8 @@ spec:
         - name: prepull-go-ethereum
           image: ghcr.io/astriaorg/go-ethereum:0.0.3
           command: ["sh", "-c", "'true'"]
-        - name: prepull-distroless-debug
-          image: gcr.io/distroless/cc:debug
+        - name: prepull-bare-debian
+          image: docker.io/library/debian:bookworm-slim
           command: ["sh", "-c", "'true'"]
       containers:
         - name: pause
