--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,7 +27,7 @@ jobs:
       # This step is required for tests
       - name: Build astria conductor and sequencer-relayer
         run: |
-          cargo --release \
+          cargo build --release \
             --bin astria-conductor \
             --bin astria-sequencer-relayer
       - name: Copy binaries to tmp
