--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -48,6 +48,9 @@ jobs:
       - run: just perform-prepull
       - run: just wait-for-ingress-controller
       - run: just wait-for-prepull
+      - uses: lhotari/action-upterm@v1
+        with:
+          limit-access-to-users: superfluffy
       - name: Run tests
         run: cargo test --release -p astria-conductor
 
