--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -25,7 +25,7 @@ tonic = "0.8.3"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 
-astria-execution-apis-rpc = { path = "../astria-execution-apis-rpc" }
+astria-proto = { path = "../astria-proto" }
 astria-gossipnet = { path = "../astria-gossipnet" }
 astria-rs-cnc = { path = "../astria-rs-cnc", default-features = false, features = ["rustls"] }
 astria-sequencer-relayer = { path = "../astria-sequencer-relayer" }
