--- a/.github/workflows/proto-push.yml
+++ b/.github/workflows/proto-push.yml
@@ -26,5 +26,5 @@ jobs:
       - uses: bufbuild/buf-push-action@v1
         with:
           draft:  ${{ github.ref_name != 'main'}}
-          input: "crates/astria-proto/proto"
+          input: "crates/astria-proto"
           buf_token: ${{ secrets.BUF_TOKEN }}
