--- a/crates/astria-proto/buf.gen.yaml
+++ b/crates/astria-proto/buf.gen.yaml
@@ -4,5 +4,7 @@ managed:
 plugins:
   - plugin: buf.build/community/neoeinstein-prost
     out: .
+    opt:
+     - extern_path=.tendermint.types=::tendermint-proto::types
   - plugin: buf.build/community/neoeinstein-tonic
     out: .
