actually run light tests

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -45,7 +45,7 @@ jobs:
           --exclude astria-rs-cnc
       - name: Run light tests
         run: |
-          cargo test --release --no-run \
+          cargo test --release \
           --workspace \
           --exclude astria-gossipnet \
           --exclude astria-rs-cnc
