--- a/.github/workflows/proto.yml
+++ b/.github/workflows/proto.yml
@@ -16,7 +16,7 @@ jobs:
           github_token: ${{ github.token }}
       - uses: bufbuild/buf-lint-action@v1
         with:
-          input: "crates/proto"
+          input: "crates/astria-proto"
       # TODO(GH-29): Uncomment out after reaching any production stage
       # - uses: bufbuild/buf-breaking-action@v1
       #   with:
