implement github workflow for testing, linting (#6)
This PR implements github workflows for running tests, formatting, and linting.

Because `astria-conductor` needs the `astria-sequencer-relayer` to be running but we want to avoid building container images as part of the tests, this PR circumvents the issue by:

1. building `astria-sequencer-relayer` as a binary before the tests are run;
2. copying the binary to `/tmp/astria/`;
3. mounting `/tmp/astria/astria-sequencer-relayer` into a barebones `debian:bookworm-slim` container as a `hostPath`.

This strategy can be repeated for future test requirements.

Note that `debian:bookworm-slim` (glibc 2.36) is preferred over `debian:buster-slim` (2.28) because of compatibility with `ubuntu-22.04` (glibc 2.35).

This PR also moves to rustls everywhere to avoid linking to openssl.

Issues that this PR will left unaddressed:

+ `gossipnet` tests stall indefinitely and never finish on CI (but work locally) 
+ `rs-cnc` needs celestia running for its roundtrip test to work (needs to be updated to folow `astria-conductor` and `astria-sequencer-relayer`) 
+ `astria-conductor` and `astria-sequencer-relayer` have a ton of duplicate code. This needs to be refactored into a common testing crate

--- a/crates/astria-conductor-test/kubernetes/deployment.yml
+++ b/crates/astria-conductor-test/kubernetes/deployment.yml
@@ -132,14 +132,17 @@ spec:
           envFrom:
             - configMapRef:
                 name: metro-env
-        - name: relayer
-          image: "ghcr.io/astriaorg/sequencer-relayer:sha-574f422-debug"
-          command: ["/usr/local/bin/relayer"]
+        - name: astria-sequencer-relayer
+          image: docker.io/library/debian:bookworm-slim
+          command: ["/usr/local/bin/astria-sequencer-relayer"]
           args:
             - "--sequencer-endpoint=http://localhost:1318"
             - "--celestia-endpoint=http://localhost:26659"
             - "--validator-key-file=/root/.metro/config/priv_validator_key.json"
           volumeMounts:
+            - mountPath: /usr/local/bin/astria-sequencer-relayer
+              name: astria-sequencer-relayer-binary
+              readOnly: true
             - mountPath: /home/relayer
               name: relayer-home-vol
             - mountPath: /root/.metro
@@ -164,6 +167,10 @@ spec:
             - containerPort: 8545
             - containerPort: 50051
       volumes:
+      - name: astria-sequencer-relayer-binary
+        hostPath:
+          path: /tmp/astria/astria-sequencer-relayer
+          type: File
       - name: bridge-scripts-volume
         configMap:
           name: bridge-scripts
