--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -63,7 +63,7 @@ jobs:
       - run: just wait-for-prepull
       - name: Run heavy tests
         run: |
-          cargo test --release --no-run \
+          cargo test --release \
           --workspace \
           --exclude astria-gossipnet \
           --exclude astria-rs-cnc \
