--- a/crates/astria-gossipnet/Cargo.toml
+++ b/crates/astria-gossipnet/Cargo.toml
@@ -4,11 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-color-eyre = "0.6.2"
-futures = "0.3"
 libp2p = { version = "0.51", features = ["gossipsub", "mdns", "noise", "macros", "ping", "tcp", "tokio", "yamux"] }
-tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "signal"] }
-tracing = "0.1"
+
+color-eyre = { workspace = true }
+futures = { workspace = true }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
+tracing = { workspace = true }
 
 [features]
 mdns = []
