use pause:3.2 image which has arm and amd versions

--- a/kubernetes-ci/prepull-daemon-set.yml
+++ b/kubernetes-ci/prepull-daemon-set.yml
@@ -33,5 +33,5 @@ spec:
           command: ["sh", "-c", "'true'"]
       containers:
         - name: pause
-          image: gcr.io/google_containers/pause
+          image: gcr.io/google_containers/pause:3.2
 ---
