--- a/crates/astria-proto/buf.gen.yaml
+++ b/crates/astria-proto/buf.gen.yaml
@@ -5,6 +5,7 @@ plugins:
   - plugin: buf.build/community/neoeinstein-prost
     out: .
     opt:
+     - extern_path=.tendermint.crypto=::tendermint-proto::crypto
      - extern_path=.tendermint.types=::tendermint-proto::types
   - plugin: buf.build/community/neoeinstein-tonic
     out: .
