change names of astria packages to match new directory structure. add buf.

--- a/crates/astria-conductor/Dockerfile
+++ b/crates/astria-conductor/Dockerfile
@@ -46,14 +46,14 @@ RUN case "$TARGETPLATFORM" in \
 COPY . .
 RUN cargo zigbuild --release \
     --target $(cat ./target_triple) \
-    --bin conductor
+    --bin astria-conductor
 # replace this with `--out` or `--out-dir` once stable
 RUN mkdir -p target/release \
-    && cp target/$(cat ./target_triple)/release/conductor target/release/
+    && cp target/$(cat ./target_triple)/release/astria-conductor target/release/
 
 # TODO - remove debug tag once this is stable
 FROM gcr.io/distroless/cc:debug
 WORKDIR /app/
 EXPOSE 2450
-COPY --from=builder /build/target/release/conductor /usr/local/bin/conductor
-ENTRYPOINT ["/usr/local/bin/conductor"]
+COPY --from=builder /build/target/release/astria-conductor /usr/local/bin/astria-conductor
+ENTRYPOINT ["/usr/local/bin/astria-conductor"]
