--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,9 @@ hex = "0.4"
 k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
 # disabling default features and enablinbg rustls to ensure openssl is not linked anywhere;
 # similar as for reqwest
-kube = { version = "0.82.2", default-features = false, features = ["rustls-tls"] }
+kube = { version = "0.82.2", default-features = false, features = [
+  "rustls-tls",
+] }
 minijinja = "0.32.1"
 once_cell = "1.17.1"
 serde = "1"
@@ -35,10 +37,13 @@ prost-types = "0.11"
 rand = "0.7"
 # disable default features and explicitly enable rustls-tls to ensure openssl is disabled
 # in the entire workspace
-reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
+reqwest = { version = "0.11", default-features = false, features = [
+  "rustls-tls",
+] }
 tempfile = "3.5.0"
 tendermint = "0.30"
 tendermint-proto = "0.30"
+tendermint-rpc = "0.30"
 tokio = "1"
 tonic = "0.9"
 tracing = "0.1"
