--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
 kube = { version = "0.82.2", default-features = false, features = ["rustls-tls"] }
 minijinja = "0.32.1"
 once_cell = "1.17.1"
+sha2 = "0.10"
 serde = "1"
 serde_json = "1"
 serde_yaml = "0.9"
