update astria-conductor tests to use sequencer-relayer env config

--- a/crates/astria-conductor-test/kubernetes/config-maps.yml
+++ b/crates/astria-conductor-test/kubernetes/config-maps.yml
@@ -40,7 +40,9 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: relayer-env
+  name: sequencer-relayer-env
 data:
-  home_dir: "/home/relayer"
+  astria_sequencer_relayer_sequencer_endpoint: "http://localhost:1318"
+  astria_sequencer_relayer_celestia_endpoint: "http://localhost:26659"
+  astria_sequencer_relayer_validator_key_file: "/root/.metro/config/priv_validator_key.json"
 ---
