--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
 [workspace.dependencies]
 base64 = "0.21"
 bech32 = "0.9"
+bytes = "1.4"
 clap = "4"
 color-eyre = "0.6"
 ed25519-dalek = "1"
