--- a/crates/astria-rs-cnc/Cargo.toml
+++ b/crates/astria-rs-cnc/Cargo.toml
@@ -7,9 +7,8 @@ license = "Apache-2.0"
 rust-version = "1.65"
 
 [dependencies]
-bytes = "1.3.0"
-
 base64 = { workspace = true }
+bytes = { workspace = true }
 eyre = { workspace = true }
 hex = { workspace = true }
 rand = { workspace = true }
