Testing github refs

--- a/.github/workflows/reusable-docker-build.yml
+++ b/.github/workflows/reusable-docker-build.yml
@@ -17,6 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ contains(github.ref, 'refs/tags/v') && contains(github.ref, format('--{0}', inputs.package-name)) || github.ref == 'refs/heads/main' || github.event_name == 'pull_request' }}
     steps:
+      - name: Test
+        run: echo ${{ github.ref }}
       # Checking out the repo
       - uses: actions/checkout@v3
       # https://github.com/docker/setup-qemu-action
