--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,10 +7,10 @@ on:
     branches:
       - "main"
     tags:
-      - "v[0-9]+.[0-9]+.[0-9]+--.*"
-      - "v[0-9]+.[0-9]+.[0-9]+-alpha.[0-9]+--.*"
-      - "v[0-9]+.[0-9]+.[0-9]+-beta.[0-9]+--.*"
-      - "v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+--.*"
+      - "v[0-9]+.[0-9]+.[0-9]+--[a-z]+"
+      - "v[0-9]+.[0-9]+.[0-9]+-alpha.[0-9]+--[a-z]+"
+      - "v[0-9]+.[0-9]+.[0-9]+-beta.[0-9]+--[a-z]+"
+      - "v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+--[a-z]+"
   # trigger on pull request updates when target is `main` branch
   pull_request:
     branches:
