add tracing to the tower abci server
This commit vendors tracing-tower in the same way as penumbra
has done. It then propagates the tracing spans as needed.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
   "crates/astria-sequencer",
   "crates/astria-sequencer-relayer",
   "crates/astria-sequencer-relayer-test",
+  "crates/astria-tracing-tower",
 ]
 
 [workspace.dependencies]
