--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,3 +50,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 uuid = "1.3.1"
 which = "4.4.0"
+
+[patch."https://github.com/penumbra-zone/penumbra.git"]
+penumbra-storage = { git = "https://github.com/astriaorg/penumbra.git", branch = "noot/fix-trace-v0.53.1" }
+penumbra-tower-trace = { git = "https://github.com/astriaorg/penumbra.git", branch = "noot/fix-trace-v0.53.1" }
