--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,12 +1,7 @@
 name: Rust
 env:
   CI: true
-  RUSTFLAGS: |-
-    "
-    -D warnings
-    -D unreachable-pub
-    --cfg tokio_unstable
-    "
+  RUSTFLAGS: "-D warnings -D unreachable-pub --cfg tokio_unstable"
 on: 
   pull_request:
   push:
