--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -96,4 +96,4 @@ jobs:
       - name: run clippy
         run: cargo clippy --workspace --all-targets --exclude astria-sequencer -- -D warnings
       - name: run clippy
-        run: cargo clippy --all-targets --p astria-sequencer -- -D warnings
+        run: cargo clippy --all-targets -p astria-sequencer -- -D warnings
