--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -95,5 +95,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: run clippy
         run: cargo clippy --workspace --all-targets --exclude astria-sequencer -- -D warnings
-      - name: run clippy
-        run: cargo clippy --all-targets -p astria-sequencer -- -D warnings
+      - name: run pedantic clippy
+        run: cargo clippy --all-targets -p astria-sequencer -- -W clippy::pedantic -D warnings
