convert protos and sequencer relayer to internal commit types again

--- a/crates/astria-proto/proto/buf.yaml
+++ b/crates/astria-proto/proto/buf.yaml
@@ -2,6 +2,7 @@ version: v1
 name: buf.build/astria/astria
 deps:
   - buf.build/tendermint/tendermint
+  - buf.build/cosmos/gogo-proto
 breaking:
   use:
     - FILE
