ci: make pedantic clippy the default (#91)
This commit makes `clippy::pedantic` the default
lint group for the repository. Only a few crates
are currently exempt from it. All new crates are
expected to adhere to `clippy::pedantic`.

This commit also ensures that `astria-proto`
does not trigger `clippy::pedantic` warnings:

+ generated code is generally exempt
+ a few doc comment related lints are enabled to
  make for nicer rust docs from the generated
  code
+ the conversion methods for `Uint128` are
  updated to no longer need explicit casts;
  they expicitly move bytes into the right
  positions instead.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,7 +13,6 @@ jobs:
   test:
     runs-on: ubuntu-22.04
     steps:
-      - run: echo $RUSTFLAGS
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@1.69.0
       - uses: Swatinem/rust-cache@v2
@@ -93,7 +92,15 @@ jobs:
         with:
           version: "1.17.0"
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      - name: run clippy
-        run: cargo clippy --workspace --all-targets --exclude astria-sequencer -- -D warnings
       - name: run pedantic clippy
-        run: cargo clippy --all-targets -p astria-sequencer -- -W clippy::pedantic -D warnings
+        run: |
+          cargo clippy --workspace --all-targets \
+          --exclude astria-conductor \
+          --exclude astria-conductor-test \
+          --exclude astria-sequencer-relayer \
+          --exclude astria-sequencer-relayer-test \
+          --exclude astria-gossipnet \
+          --exclude astria-rs-cnc \
+          -- -W clippy::pedantic -D warnings
+      - name: run default clippy
+        run: cargo clippy --workspace --all-targets -- -D warnings
