--- a/crates/astria-gossipnet/Cargo.toml
+++ b/crates/astria-gossipnet/Cargo.toml
@@ -11,6 +11,8 @@ color-eyre = { workspace = true }
 futures = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync"] }
 tracing = { workspace = true }
+
+[dev-dependencies]
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 
 [features]
