--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,5 +52,5 @@ uuid = "1.3.1"
 which = "4.4.0"
 
 [patch."https://github.com/penumbra-zone/penumbra.git"]
-penumbra-storage = { git = "https://github.com/astriaorg/penumbra.git", branch = "noot/fix-trace" }
-penumbra-tower-trace = { git = "https://github.com/astriaorg/penumbra.git", branch = "noot/fix-trace" }
+penumbra-storage = { git = "https://github.com/astriaorg/penumbra.git", rev = "78153d8645bc0a382ec4bc8c494306809a69d9be" }
+penumbra-tower-trace = { git = "https://github.com/astriaorg/penumbra.git", rev = "78153d8645bc0a382ec4bc8c494306809a69d9be" }
