use ed25519-consensus

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ bech32 = "0.9"
 bytes = "1.4"
 clap = "4"
 color-eyre = "0.6"
+ed25519-consensus = "2.1.0"
 ed25519-dalek = "1"
 eyre = "0.6"
 figment = "0.10.8"
