--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-trait = { workspace = true }
 color-eyre = { workspace = true }
 figment = { workspace = true, features = ["toml", "env"] }
 tokio = { workspace = true }
@@ -14,5 +15,8 @@ clap = { workspace = true, features = ["derive"] }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["ansi", "json"] }
-# TODO: should this be moved to workspace? also appears in astria-conductor
-is-terminal = "0.4.7"
+# TODO: should these be moved to workspace? 
+is-terminal = "0.4.7" # also appears in astria-conductor
+axum = "0.6.16" #also appears in astria-sequencer-relayer
+tokio-stream = { version = "0.1" }
+hyper = "0.14.27"
