--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ members = [
 async-trait = "0.1.52"
 base64 = "0.21"
 bech32 = "0.9"
+borsh = "0.10.3"
 bytes = "1.4"
 clap = "4"
 color-eyre = "0.6"
