ignore client tests on ci for now

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -64,6 +64,7 @@ jobs:
           cargo test --release \
           --workspace \
           --exclude astria-rs-cnc \
+          --exclude astria-sequencer-client \
           -- --ignored
 
   fmt:
