--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
 ]
 
 [workspace.dependencies]
+axum = "0.6.16"
 async-trait = "0.1.52"
 base64 = "0.21"
 bech32 = "0.9"
@@ -24,6 +25,8 @@ eyre = "0.6"
 figment = "0.10.8"
 futures = "0.3"
 hex = "0.4"
+hyper = "0.14.27"
+is-terminal = "0.4.7"
 # marking k8s as using k8s 1.26 here to make it clear that we are targetting 1.26
 # in the tests
 k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
