--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
   "crates/astria-sequencer",
   "crates/astria-sequencer-relayer",
   "crates/astria-sequencer-relayer-test",
+  "crates/astria-sequencer-utils",
 ]
 
 [workspace.dependencies]
@@ -27,7 +28,9 @@ hex = "0.4"
 k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
 # disabling default features and enablinbg rustls to ensure openssl is not linked anywhere;
 # similar as for reqwest
-kube = { version = "0.82.2", default-features = false, features = ["rustls-tls"] }
+kube = { version = "0.82.2", default-features = false, features = [
+  "rustls-tls",
+] }
 minijinja = "0.32.1"
 once_cell = "1.17.1"
 sha2 = "0.10"
@@ -39,7 +42,9 @@ prost-types = "0.11"
 rand = "0.8"
 # disable default features and explicitly enable rustls-tls to ensure openssl is disabled
 # in the entire workspace
-reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
+reqwest = { version = "0.11", default-features = false, features = [
+  "rustls-tls",
+] }
 tempfile = "3.5.0"
 tendermint = "0.32"
 tendermint-config = "0.32"
