--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ tempfile = "3.5.0"
 tendermint = "0.32"
 tendermint-config = "0.32"
 tendermint-proto = "0.32"
+tendermint-rpc = "0.32"
 tokio = "1.28"
 tonic = "0.9"
 tracing = "0.1"
