add dockerfile for sequencer and workflow step

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -23,6 +23,12 @@ jobs:
       package-name: conductor
       dockerfile: crates/astria-conductor/Dockerfile
 
+  sequencer:
+    uses: './.github/workflows/reusable-docker-build.yml'
+    with:
+      package-name: sequencer
+      dockerfile: crates/astria-sequencer/Dockerfile
+
   sequencer-relayer:
     uses: './.github/workflows/reusable-docker-build.yml'
     with:
