--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+astria-sequencer = { path = "../astria-sequencer" }
+astria-sequencer-client = { path = "../astria-sequencer-client" }
 async-trait = { workspace = true }
 color-eyre = { workspace = true }
 figment = { workspace = true, features = ["toml", "env", "test"] }
