--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -10,6 +10,7 @@ astria-sequencer = { path = "../astria-sequencer" }
 astria-sequencer-client = { path = "../astria-sequencer-client" }
 async-trait = { workspace = true }
 color-eyre = { workspace = true }
+ed25519-consensus = { workspace = true }
 figment = { workspace = true, features = ["toml", "env", "test"] }
 tokio = { workspace = true, features = ["full"] }
 serde = { workspace = true, features = ["derive"] }
@@ -23,6 +24,7 @@ axum = { workspace = true }
 hyper = { workspace = true }
 ethers = { version = "2.0.7", features = ["ws"] }
 tokio-stream = "0.1.14"
+hex = { workspace = true }
 
 [dev-dependencies]
 once_cell = { workspace = true }
